--- a/product/src/index.html
+++ b/product/src/index.html
@@ -21,6 +21,10 @@
   <div class="canvas-box">
     <canvas id="canvas">你的浏览器不支持canvas</canvas>
   </div>
+  <img
+    src="./img/bg.jpg"
+    class="bg"
+  >
   <div class="title-name">
     泛康医学集团
     2024年会抽奖
